hot fix attend wrap

--- a/src/styles/sub_page/_attend.scss
+++ b/src/styles/sub_page/_attend.scss
@@ -74,11 +74,10 @@ $prefix: ".attend";
 
     &__list {
         margin: 0 1rem;
-        // max-width: calc(calc(vars.$bp-xxl - 13rem) - 320px);
+        max-width: calc(calc(vars.$bp-xxl - 13rem) - 320px);
         width: 100%;
         display: flex;
         align-items: center;
-        margin-top: 5rem;
 
         @media (max-width: vars.$bp-xl) {
             margin-top: 2rem;
